--- a/css/style.css
+++ b/css/style.css
@@ -286,8 +286,7 @@ a.active {
 ==================================================*/
 
 #home {
-    background: url(https://scontent-bom1-2.xx.fbcdn.net/v/t1.0-9/87961028_2502460820071403_847951991635181568_o.jpg?_nc_cat=107&_nc_sid=dd9801&_nc_ohc=hrboIgXy5o4AX_F8sws&_nc_ht=scontent-bom1-2.xx&oh=61d6c9907801ca26582c52a99fb01d3b&oe=5EC10D2A);
-    background-size: cover;
+    background: url(https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/88116061_2507125232938295_5999911253420539904_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=fcf6hH-0rLkAX_Wtq64&_nc_ht=scontent-bom1-1.xx&oh=e126ec11bab142fa3a88a5cea353f61a&oe=5EBC3930
     
 }
 .overlay {
