--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,3 @@
-/*
-* Resume template
-* Created by : Ahmed Essa
-* website : www.ahmedessa.net
-*/
-
-
-/* Table of Content
-==================================================
-	- Google fonts & font family -
-	- typography -
-	- General -
-    - Preloader -
-	- Header -
-    - home section -
-    - About section -
-    - experience section -
-    - projects section -
-    - Contact section -
-    - Responsive media queries -
-*/
-
-
-/* Google fonts & font family
-==================================================*/
-
 @import 'https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Playfair+Display:400,400i,700,700i,900,900i';
 
 /*
@@ -233,6 +207,7 @@ header {
     -webkit-transition: all .5s;
     transition: all .5s;
     height: 65px;
+    background-color: rgb(0, 238, 255);
 }
 
 nav ul {
@@ -253,13 +228,13 @@ nav li {
 nav li a {
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #444;
+    color:black;
     font-size: 11px;
     font-weight: bold;
 }
 
 .bg-nav {
-    background: #fff;
+    background:gray;
     border-bottom: 1px solid #f3f3f3
 }
 
@@ -268,25 +243,36 @@ nav li a {
 }
 
 a:focus {
-    color: yellow;
+    color:gray;
     text-decoration: none;
 }
 
 a:hover {
-    color: yellow;
+    color: gray;
     text-decoration: none;
 }
 
 a.active {
-    color: yellow;
+    color: rgb(0, 238, 255);
 }
 
 
 /* home section
 ==================================================*/
 
-#home {
-    background: url(https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/88116061_2507125232938295_5999911253420539904_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=fcf6hH-0rLkAX_Wtq64&_nc_ht=scontent-bom1-1.xx&oh=e126ec11bab142fa3a88a5cea353f61a&oe=5EBC3930
+
+#home{
+   
+      -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-image: url("https://scontent-bom1-1.xx.fbcdn.net/v/t1.0-9/88116061_2507125232938295_5999911253420539904_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_ohc=fcf6hH-0rLkAX_Wtq64&_nc_ht=scontent-bom1-1.xx&oh=e126ec11bab142fa3a88a5cea353f61a&oe=5EBC3930");
+    background-size: cover;
+
+
+
+     background-repeat: no-repeat;
+    /*background-size: auto auto;*/
     
 }
 .overlay {
@@ -301,6 +287,7 @@ a.active {
     right: 0;
     left: 0;
 }
+
 .table-cell {
     display: table-cell;
     vertical-align: middle;
@@ -323,7 +310,7 @@ a.active {
     margin: 0 auto;
 }
 
-.about-border {
+/* .about-border {
     position: absolute;
     border: 10px solid black;
     width: 420px;
@@ -331,7 +318,7 @@ a.active {
     top: 0px;
     right: 05px;
     z-index: 1
-}
+} */
 
 
 /* experience section
