--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h1 {
     font-family: 'Playfair Display', serif;
     font-size: 80px;
     line-height: 70px;
-    color:yellow;
+    color:black;
     
 }
   
