--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ a.active {
     background: -webkit-linear-gradient(to right, #0575E6, #00F260);
     background: linear-gradient(to right, #0575E6, #00F260);
     opacity: 0.7;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
